--- a/src/components/Shop.astro
+++ b/src/components/Shop.astro
@@ -79,7 +79,7 @@ const { category } = Astro.params;
       <!-- LOADER -->
       <span
         id="products__loader"
-        class="mx-auto loading loading-infinity loading-lg hidden"
+        class="mx-auto loading loading-infinity loading-lg hidden max-nav:mt-5"
         aria-label="Loading products"
         aria-live="polite"
         role="status"
