--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -130,6 +130,7 @@ const isAuth = Astro.locals.session;
       ) : (
         <div class="dropdown dropdown-hover dropdown-end">
           <div
+            aria-label="Open user menu"
             aria-haspopup="true"
             aria-expanded="false"
             role="button"
