--- a/src/components/Filters.astro
+++ b/src/components/Filters.astro
@@ -63,8 +63,10 @@ import DualRangeSlider from "@components/react-components/DualRangeSlider";
 
     <!-- DUALSLIDER -->
     <div class="collapse collapse-arrow bg-transparent mt-6">
-      <input type="checkbox" />
-      <div class="collapse-title text-xl font-medium">Price</div>
+      <input id="sliderInput" type="checkbox" />
+      <label for="sliderInput" class="collapse-title text-xl font-medium">
+        Price
+      </label>
       <div class="collapse-content mt-5">
         <!-- COLLAPSE CONTENT -->
         <DualRangeSlider min={0} max={100} client:load />
@@ -75,8 +77,10 @@ import DualRangeSlider from "@components/react-components/DualRangeSlider";
 
     <!-- COLORS -->
     <div class="collapse collapse-arrow bg-transparent mt-6">
-      <input type="checkbox" />
-      <div class="collapse-title text-xl font-medium">Colors</div>
+      <input id="colorSelector" type="checkbox" />
+      <label for="colorSelector" class="collapse-title text-xl font-medium">
+        Colors
+      </label>
       <div class="collapse-content mt-5 flex flex-wrap gap-4">
         <!-- COLLAPSE CONTENT -->
         <ColorSelector color="#22c55e" />
@@ -96,8 +100,10 @@ import DualRangeSlider from "@components/react-components/DualRangeSlider";
 
     <!-- SIZE -->
     <div class="collapse collapse-arrow bg-transparent mt-6">
-      <input type="checkbox" />
-      <div class="collapse-title text-xl font-medium">Size</div>
+      <input id="sizeSelector" type="checkbox" />
+      <label for="sizeSelector" class="collapse-title text-xl font-medium">
+        Size
+      </label>
       <div class="collapse-content mt-5 flex flex-wrap justify-start gap-2">
         <!-- COLLAPSE CONTENT -->
         <SizeSelector content="XX-Small" />
@@ -119,8 +125,10 @@ import DualRangeSlider from "@components/react-components/DualRangeSlider";
       id="suit_style_filter"
       class="collapse collapse-arrow bg-transparent mt-6"
     >
-      <input type="checkbox" />
-      <div class="collapse-title text-xl font-medium">Dress Style</div>
+      <input type="checkbox" id="dressStyle" />
+      <label for="dressStyle" class="collapse-title text-xl font-medium">
+        Dress Style
+      </label>
       <div
         class="collapse-content mt-3 flex flex-wrap justify-start gap-2 text-primary"
       >
@@ -205,7 +213,7 @@ import DualRangeSlider from "@components/react-components/DualRangeSlider";
         products__container.querySelectorAll("article").forEach((el) => {
           el.remove();
         });
-        products__container.classList.replace("grid", "flex")
+        products__container.classList.replace("grid", "flex");
         products__container.firstElementChild?.classList.remove("hidden");
         // Cerrar el filtro
         $isFilterOpen.set(false);
