--- a/src/pages/auth/login.astro
+++ b/src/pages/auth/login.astro
@@ -45,17 +45,21 @@ if (Astro.locals.session) {
         <Icons.Key class="absolute left-2.5 bottom-2.5 w-6 h-6 text-gray-500" />
       </label>
       <button
-        class="bg-black mt-3 py-2 rounded-xl text-white hover:bg-gray-800 transition-all"
+        class="bg-black mt-3 py-2 rounded-xl text-white hover:bg-gray-800 group transition-all"
+        aria-busy="false"
         type="submit"
       >
-        Login
+        <span class="group-aria-busy:hidden">Login</span>
+        <span
+          class="hidden -my-3 loading loading-infinity loading-lg group-aria-busy:inline-block"
+        ></span>
       </button>
     </form>
     <p class="text-center text-gray-500 text-sm mt-5 cursor-default">
-      Don't have an account? <a
-        class="text-black font-medium hover:underline"
-        href="/auth/signup">Sign up</a
-      >
+      <span>Don't have an account?</span>
+      <a class="text-black font-medium hover:underline" href="/auth/signup">
+        Sign up
+      </a>
     </p>
   </div>
   <img
