fix: url products

--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 
 const newArrivals = [
   {
-    id: 1,
+    id: "01948be6-78e3-71a9-b7fc-a455a67d5009",
     title: "T-shirt with Tape Details",
     thumbnailUrl: "/imgs/t-shirt.webp",
     rating: "4.5",
@@ -12,7 +12,7 @@ const newArrivals = [
     price: 120
   },
   {
-    id: 2,
+    id: "01948be6-78e3-7020-b984-9233dcf8f217",
     title: "Skinny Fit Jeans",
     thumbnailUrl: "/imgs/fit-jeans.webp",
     rating: "3.5",
@@ -20,7 +20,7 @@ const newArrivals = [
     price: 240
   },
   {
-    id: 3,
+    id: "01948be6-78e3-7087-a28b-716050e772b1",
     title: "Checkered Shirt",
     thumbnailUrl: "/imgs/checkered-shirt.webp",
     rating: "4.5",
@@ -28,7 +28,7 @@ const newArrivals = [
     price: 180
   },
   {
-    id: 4,
+    id: "01948be6-78e3-736d-a80a-7941750d56ce",
     title: "Sleeve Striped T-shirt",
     thumbnailUrl: "/imgs/striped-t-shirt.webp",
     rating: "4.5",
@@ -39,7 +39,7 @@ const newArrivals = [
 
 const topSellings = [
   {
-    id: 5,
+    id: "01948be6-78e3-713d-a6cb-1fff1645a964",
     title: "Vertical Striped Shirt",
     thumbnailUrl: "/imgs/striped-shirt.webp",
     rating: "5",
@@ -47,7 +47,7 @@ const topSellings = [
     price: 212
   },
   {
-    id: 6,
+    id: "01948be6-78e3-7122-a937-a51b2ff590a3",
     title: "Courage Graphic T-shirt",
     thumbnailUrl: "/imgs/courage-t-shirt.webp",
     rating: "4",
@@ -55,7 +55,7 @@ const topSellings = [
     price: 145
   },
   {
-    id: 7,
+    id: "01948be6-78e3-7163-8f67-fa9d7d84a7db",
     title: "Loose Fit Bermuda Shorts",
     thumbnailUrl: "/imgs/bermuda-shorts.webp",
     rating: "3.0",
@@ -63,7 +63,7 @@ const topSellings = [
     price: 80
   },
   {
-    id: 8,
+    id: "01948be6-78e3-709f-8415-e3cf70aea6a2",
     title: "Faded Skinny Jeans",
     thumbnailUrl: "/imgs/skinny-jeans.webp",
     rating: "4.5",
@@ -173,7 +173,7 @@ const topSellings = [
 
     <div class="mt-16 flex flex-col gap-5">
       <div class="flex max-nav:flex-col justify-center gap-5 w-full">
-        <a aria-label="View casual style products" class="relative rounded-3xl group overflow-hidden" href="/shop/Casual">
+        <a aria-label="View casual style products" class="relative rounded-3xl group overflow-hidden" href="/shop/casual">
           <figure>
             <Image
               class="w-full md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl transition-transform duration-500 group-hover:scale-110"
@@ -191,7 +191,7 @@ const topSellings = [
         <a
           aria-label="View formal style products"
           class="relative max-w-[880px] grow bg-white rounded-3xl flex justify-end group overflow-hidden"
-          href="/shop/Formal"
+          href="/shop/formal"
         >
           <figure>
             <Image
@@ -212,7 +212,7 @@ const topSellings = [
         <a
           aria-label="View party style products"
           class="relative max-w-[880px] grow bg-white rounded-3xl flex justify-end overflow-hidden group"
-          href="/shop/Party"
+          href="/shop/party"
         >
           <figure>
             <Image
@@ -228,7 +228,7 @@ const topSellings = [
             </figcaption>
           </figure>
         </a>
-        <a aria-label="View gym style products" class="relative rounded-3xl overflow-hidden group" href="/shop/Gym">
+        <a aria-label="View gym style products" class="relative rounded-3xl overflow-hidden group" href="/shop/gym">
           <figure>
             <Image
               class="nav:w-[407px] w-full md:h-[289px] max-nav:h-[190px] object-cover rounded-3xl transition-transform duration-500 group-hover:scale-110"
