fix: remove 404 links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -89,9 +89,9 @@ const isAuth = Astro.locals.session;
       </li>
 
       <!-- Otros Enlaces de Navegación -->
-      <li><a class="truncate" href="/shop/On%20Sale">On Sale</a></li>
-      <li><a class="truncate" href="/shop/New%20Arrivals">New Arrivals</a></li>
-      <li><a class="truncate" href="/shop/Brands">Brands</a></li>
+      <li><a class="truncate" href="/shop">On Sale</a></li>
+      <li><a class="truncate" href="/shop">New Arrivals</a></li>
+      <li><a class="truncate" href="/shop">Brands</a></li>
     </ul>
   </nav>
   <!-- NAVEGACIÓN PRINCIPAL END -->
