--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -108,7 +108,7 @@ const topSellings = [
       <a
         class="block max-md:w-full py-3 px-14 border border-opacity-10 rounded-full mx-auto text-center"
         aria-label="Show all new arrivals"
-        href="/shop/New%20Arrivals"
+        href="/shop"
       >
         View All
       </a>
@@ -150,7 +150,7 @@ const topSellings = [
       <a
         class="block max-md:w-full py-3 px-14 border border-opacity-10 rounded-full mx-auto text-center"
         aria-label="Show all top selling products"
-        href="/shop/Top%20Selling"
+        href="/shop"
       >
         View All
       </a>
